2009-09-28  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (set-package): Provide a more meaningful error
	message when package doesn't exist.

	* swank-lispworks.lisp (replace-strings-with-symbols): Didn't work on
	non-proper lists. Reported by Madhu.

2009-09-27  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-sbcl.lisp (call-with-debugger-hook): Correctly deal with
	case of HOOK being NIL.
	(make-definition-source-location): Somewhat simplified.
	(string-path-snippet): Removed, not needed anymore.

2009-09-24  Stas Boukarev  <stassats@gmail.com>

	* swank-sbcl.lisp (swank-compile-string): Ignore unused variable
	warningsp.

2009-09-23  Helmut Eller  <heller@common-lisp.net>

	* swank-sbcl.lisp (receive-if): Bind *break-on-signals* to
	nil before using with-timeout.

2009-09-22  Helmut Eller  <heller@common-lisp.net>

	* swank-ccl.lisp (find-definitions): For fbound symbols also
	consider source-notes in the function object.  Useful if
	the function slot was set with (setf (symbol-function ..))
	and not by defun.

2009-09-21  Stas Boukarev  <stassats@gmail.com>

	* doc/slime.texi (slime-sprof): document slime-sprof contrib.

2009-09-20  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-abcl.lisp (thread-description): Fix typo.
	(set-thread-description): Ditto.

2009-09-20  Tobias C. Rittweiler <tcr@freebits.de>

	Generalize M-? (or M-_ respectively.)

	It will now list:

	  - call sites for functions,

	  - macroexpand sites for macros,

	  - binding, setting, referencing sites for variables,

	  - specializing methods for classes.

	* slime.el (slime-xref): Deal with :not-implemented.
	(slime-xrefs): New. Makes RPC request to XREFS.
	(slime-edit-callers): Renamed to `slime-edit-uses'.
	(slime-edit-uses): Use slime-xrefs.

	* swank-backend.lisp (who-*): Add default implementation which
	returns :not-implemented.

	* swank.lisp (xref-doit): Extracted from XREF.
	(xref): Pass over :not-implemented to Emacs side.